# VideoAnalysis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
video_analysis/api/: app.py  data_processing.py
video_analysis/api/db/: mongo.py
video_analysis/api/entities/group_statistics/: models.py  service.py  views.py
video_analysis/api/entities/video/: models.py  service.py  views.py
